--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.github.gabrielemariotti.cards:cardslib-cards:2.1.0'
     compile 'com.eftimoff:androidplayer:1.0.3@aar'
     compile 'com.skyfishjy.ripplebackground:library:1.0.1'
+//    compile 'com.race604.flyrefresh:library:1.0.1'
 }
