--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'com.android.support:support-v4:22.1.1'
-    compile 'com.github.gabrielemariotti.cards:cardslib-core:2.1.0'
-    compile 'com.github.gabrielemariotti.cards:cardslib-cards:2.1.0'
-    compile 'com.eftimoff:androidplayer:1.0.3@aar'
-    compile 'com.skyfishjy.ripplebackground:library:1.0.1'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.android.support:cardview-v7:22.2.0'
+    compile 'jp.wasabeef:recyclerview-animators:1.2.0@aar'
+    compile 'com.race604.flyrefresh:library:1.0.1'
 }
