--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -23,14 +23,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:launchMode="singleInstance"
             android:name=".ui.HomeActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:label="@string/app_name"
+            android:launchMode="singleInstance" >
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
 
         <service
@@ -38,59 +38,48 @@
             android:enabled="true"
             android:exported="false" >
         </service>
-
         <service
             android:name=".network.StatusService"
             android:exported="false" >
         </service>
 
         <activity
-            android:launchMode="singleInstance"
-            android:name=".ui.SoundActivity"
-            android:label="@string/title_activity_music"
-            android:parentActivityName=".ui.HomeActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.hl.rollingbaby.ui.HomeActivity" />
-        </activity>
-        <activity
-            android:launchMode="singleInstance"
             android:name=".ui.TemperatureActivity"
             android:label="@string/title_activity_temperature"
+            android:launchMode="singleInstance"
             android:parentActivityName=".ui.HomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.hl.rollingbaby.ui.HomeActivity" />
         </activity>
         <activity
-            android:launchMode="singleInstance"
             android:name=".ui.SwingActivity"
             android:label="@string/title_activity_swing"
+            android:launchMode="singleInstance"
             android:parentActivityName=".ui.HomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.hl.rollingbaby.ui.HomeActivity" />
         </activity>
         <activity
-            android:launchMode="singleInstance"
-            android:name=".ui.SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:parentActivityName=".ui.HomeActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.hl.rollingbaby.ui.HomeActivity" />
-        </activity>
-        <activity
-            android:launchMode="singleInstance"
             android:name=".ui.HumidityActivity"
             android:label="@string/title_activity_humidity"
+            android:launchMode="singleInstance"
             android:parentActivityName=".ui.HomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.hl.rollingbaby.ui.HomeActivity" />
         </activity>
+        <activity
+            android:name=".ui.MainActivity"
+            android:label="@string/title_activity_main"
+            android:launchMode="singleInstance">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
