--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,15 +22,17 @@
         android:icon="@drawable/stroller"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".ui.HomeActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleInstance" >
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+        <activity
+            android:name=".ui.MainActivity"
+            android:label="@string/title_activity_main"
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <service
@@ -38,48 +40,12 @@
             android:enabled="true"
             android:exported="false" >
         </service>
+
         <service
             android:name=".network.StatusService"
             android:exported="false" >
         </service>
 
-        <activity
-            android:name=".ui.TemperatureActivity"
-            android:label="@string/title_activity_temperature"
-            android:launchMode="singleInstance"
-            android:parentActivityName=".ui.HomeActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.hl.rollingbaby.ui.HomeActivity" />
-        </activity>
-        <activity
-            android:name=".ui.SwingActivity"
-            android:label="@string/title_activity_swing"
-            android:launchMode="singleInstance"
-            android:parentActivityName=".ui.HomeActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.hl.rollingbaby.ui.HomeActivity" />
-        </activity>
-        <activity
-            android:name=".ui.HumidityActivity"
-            android:label="@string/title_activity_humidity"
-            android:launchMode="singleInstance"
-            android:parentActivityName=".ui.HomeActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.hl.rollingbaby.ui.HomeActivity" />
-        </activity>
-        <activity
-            android:name=".ui.MainActivity"
-            android:label="@string/title_activity_main"
-            android:launchMode="singleInstance">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
