--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'jp.wasabeef:recyclerview-animators:1.2.0@aar'
-    compile 'com.race604.flyrefresh:library:1.0.1'
+    compile project(':library')
 }
