--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':library')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'jp.wasabeef:recyclerview-animators:1.2.0@aar'
-    compile project(':library')
+    compile 'com.android.support:support-v4:22.2.0'
 }
