--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity
             android:name=".ui.SettingActivity"
             android:label="@string/title_activity_setting"
+            android:theme="@style/Theme.Settings"
             android:parentActivityName=".ui.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
