--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'jp.wasabeef:recyclerview-animators:1.2.0@aar'
     compile 'com.android.support:support-v4:22.2.0'
+
+    compile 'com.jakewharton.timber:timber:3.1.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
 
 //compile 'com.race604.flyrefresh:library:2.0.0'
